--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,14 @@ spring.application.name=sped-it
 # ===============================
 # Set here configurations for the database connection
 #spring.datasource.url=jdbc:mysql://localhost:3306/my_database
-spring.datasource.url=jdbc:mariadb://${DB_HOST:localhost}:3306/spedit
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/spedit
 #
 
-spring.datasource.username=${DB_USER:root}
+spring.datasource.username=${DB_USER:postgres}
 spring.datasource.password=${DB_PASSWORD:40noemi20}
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-#spring.datasource.driver-class-name=org.mysql.jdbc.Driver
+server.port=${PORT:8080}
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
@@ -28,3 +29,5 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 #spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+# Dialekt JPA dla PostgreSQL
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
