--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,14 @@ spring.application.name=sped-it
 # ===============================
 # Set here configurations for the database connection
 #spring.datasource.url=jdbc:mysql://localhost:3306/my_database
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/spedit
+#spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/spedit
+spring.datasource.url=${DATABASE_URL}
 #
 
-spring.datasource.username=${DB_USER:postgres}
-spring.datasource.password=${DB_PASSWORD:40noemi20}
+#spring.datasource.username=${DB_USER:postgres}
+spring.datasource.username=
+#spring.datasource.password=${DB_PASSWORD:40noemi20}
+spring.datasource.password=
 server.port=${PORT:8080}
 #spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -24,6 +27,7 @@ spring.jpa.show-sql=true
 # schema will be automatically created afresh for every start of application
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.default_schema=public
 # Naming strategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 #spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
